trying to move content on footer to the right space

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     I have been with this company for 20 years, and I enjoy the ups and downs of coding!
                   </p>
                   <p>
-                    <a href="#">businesslady2@gmail.com</a>
+                    <a href="#">businessmanj2@gmail.com</a>
                   </p>
                 </div>
               </div>
@@ -88,7 +88,7 @@
             <!-- Latest posts -->
             <div class="panel panel-default">
               <div class="panel-heading">
-              <h4 class="panel-title">Latest Sales Updates</h4>
+              <h4 class="panel-title">Sales Updates</h4>
               </div>
               <div class="panel-body">
                 <div class="profile__comments">
